--- a/master_research/test4.ipynb
+++ b/master_research/test4.ipynb
@@ -10,12 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aaaa\n"
+      "aaaa\n",
+      "bbbb\n"
      ]
     }
    ],
    "source": [
-    "print('aaaa')"
+    "print('aaaa')\n",
+    "print('bbbb')"
    ]
   }
  ],
