--- a/sotsuron/energy_transition_analysis/read_csv.ipynb
+++ b/sotsuron/energy_transition_analysis/read_csv.ipynb
@@ -603,6 +603,30 @@
     "except RuntimeError as e:\n",
     "    print(\"Error - curve_fit failed:\", e)   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87651777",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'nb312 (Python 3.12.11)' due to a timeout waiting for the ports to get used. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import os, sys, pathlib\n",
+    "print(\"cwd =\", os.getcwd())\n",
+    "print(\"ipynb path guess =\", pathlib.Path(\"read_csv.ipynb\").resolve())\n",
+    "print(\"python =\", sys.executable)\n"
+   ]
   }
  ],
  "metadata": {
