--- a/sotsuron/energy_transition_analysis/fit_function_modern_energy_curve.ipynb
+++ b/sotsuron/energy_transition_analysis/fit_function_modern_energy_curve.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "73d81d1e",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,8 @@
       " 1   Modern  442 non-null    float64\n",
       "dtypes: float64(1), int64(1)\n",
       "memory usage: 7.0 KB\n",
-      "None\n"
+      "None\n",
+      "Modernの最も大きい値: 0.984\n"
      ]
     }
    ],
@@ -44,6 +45,10 @@
     "\n",
     "# データの概要\n",
     "print(df.info())\n",
+    "\n",
+    "#Modernの最も大きい値を表示\n",
+    "max_modern = df['Modern'].max()\n",
+    "print(f'Modernの最も大きい値: {max_modern}')\n",
     "\n"
    ]
   },
