--- a/sotsuron/energy_transition_analysis/America_energy_transition.ipynb
+++ b/sotsuron/energy_transition_analysis/America_energy_transition.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8e31aca6",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "171cdbd9",
    "metadata": {},
    "outputs": [
@@ -170,12 +170,12 @@
     "plt.show()\n",
     "\n",
     "#df['Modern Energy Rate (%)'] これを、npyとして保存,年代の情報も保持させる\n",
-    "np.save('modern_energy_rate.npy', df[['Year', 'Modern Energy Rate (%)']].values)"
+    "np.save('America_modern_energy_rate.npy', df[['Year', 'Modern Energy Rate (%)']].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "967626a4",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
     }
    ],
    "source": [
-    "modern_energy_rate = np.load('modern_energy_rate.npy')\n",
+    "modern_energy_rate = np.load('America_modern_energy_rate.npy')\n",
     "print(modern_energy_rate)"
    ]
   },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b81113be",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
     "from scipy.optimize import curve_fit\n",
     "from scipy.stats import t\n",
     "\n",
-    "NPY_PATH = \"modern_energy_rate.npy\"\n",
+    "NPY_PATH = \"America_modern_energy_rate.npy\"\n",
     "START_YEAR = 1850\n",
     "EPS_LOW, EPS_HIGH = 1e-4, 1-1e-4\n",
     "ALPHA = 0.05\n",
