--- a/sotsuron/energy_transition_analysis/America_energy_transition.ipynb
+++ b/sotsuron/energy_transition_analysis/America_energy_transition.ipynb
@@ -691,7 +691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jup312",
+   "display_name": "nb312",
    "language": "python",
    "name": "python3"
   },
@@ -705,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
