--- a/sotsuron/energy_transition_analysis/fit_function_modern_energy_curve.ipynb
+++ b/sotsuron/energy_transition_analysis/fit_function_modern_energy_curve.ipynb
@@ -729,7 +729,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nb312",
+   "display_name": "jup312",
    "language": "python",
    "name": "python3"
   },
@@ -743,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
