--- a/sotsuron/energy_transition_analysis/America_energy_transition.ipynb
+++ b/sotsuron/energy_transition_analysis/America_energy_transition.ipynb
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d4634dc9",
    "metadata": {},
    "outputs": [
@@ -686,6 +686,40 @@
     "plt.legend()\n",
     "plt.show()\n",
     "#定義、Woodのみがtraditional energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b7704c33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#もう一度アメリカのcsvファイルを読み込む\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "#アメリカのdataのパス\n",
+    "path_america = \"/work/a06/tsuda/2025_master_Tsuda/sotsuron/energy_transition_analysis/America_historical_energy_use.csv\"\n",
+    "#new_macro/modern_energy_10countries.csvに追記したい。\n",
+    "out_america = \"/work/a06/tsuda/2025_master_Tsuda/sotsuron/energy_transition_analysis/new_macro/modern_energy_10countries.csv\"\n",
+    "df_america = pd.read_csv(path_america)\n",
+    "#modern energy rateを算出\n",
+    "modern_energy_cols = ['Coal', 'Natural Gas', 'Petroleum', 'Nuclear Electric Power', 'Hydroelectric Power']\n",
+    "\n",
+    "df_america['modern_energy_rate'] = df_america[modern_energy_cols].sum(axis=1) / df_america[energy_cols].sum(axis=1)\n",
+    "#modern energy rateの正規化バージョンを追加\n",
+    "max_rate_america = df_america['modern_energy_rate'].max()\n",
+    "df_america['modern_energy_rate_normalized'] = df_america['modern_energy_rate'] / max_rate_america\n",
+    "#new_macro/modern_energy_10countries.csvに1850年、1950年、2000年のみ追記、順番はCountry,modern_1850,norm_1850,modern_1950,norm_1950,modern_2000,norm_2000で\n",
+    "with open(out_america, 'a') as f:\n",
+    "    modern_1850 = df_america.loc[df_america['Year'] == 1850, 'modern_energy_rate'].values[0]\n",
+    "    norm_1850 = df_america.loc[df_america['Year'] == 1850, 'modern_energy_rate_normalized'].values[0]\n",
+    "    modern_1950 = df_america.loc[df_america['Year'] == 1950, 'modern_energy_rate'].values[0]\n",
+    "    norm_1950 = df_america.loc[df_america['Year'] == 1950, 'modern_energy_rate_normalized'].values[0]\n",
+    "    modern_2000 = df_america.loc[df_america['Year'] == 2000, 'modern_energy_rate'].values[0]\n",
+    "    norm_2000 = df_america.loc[df_america['Year'] == 2000, 'modern_energy_rate_normalized'].values[0]\n",
+    "    f.write(f\"America,{modern_1850},{norm_1850},{modern_1950},{norm_1950},{modern_2000},{norm_2000}\\n\")\n",
+    "\n"
    ]
   }
  ],
